--- a/Rutas Control de Reparto/GUIs/FrmPrincipal.resx
+++ b/Rutas Control de Reparto/GUIs/FrmPrincipal.resx
@@ -120,6 +120,9 @@
   <metadata name="reporteBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>16, 7</value>
   </metadata>
+  <metadata name="bgwProceso.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>187, 7</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>40</value>
   </metadata>
